# fpl-player-comparison

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  app.py  cache.py  pyproject.toml  requirements.txt  router.py  server.py  test.py
.claude/commands/: update-docs.md
.github/workflows/: ci.yml
controllers/: player_controller.py
data/: bootstrap_static.json  element_summary.json
handlers/: CLAUDE.md  base_handler.py  fixtures_handler.py  history_handler.py  players_handler.py  seasons_handler.py  static_handler.py
models/: player_model.py
scripts/: capture.py
static/: CLAUDE.md  index.html
static/css/: styles.css
static/js/: CLAUDE.md  app.js
tests/: CLAUDE.md  helpers.py  test_cache.py  test_router.py
tests/controllers/: test_controllers.py
tests/e2e/: conftest.py  test_ui.py
tests/fixtures/: bootstrap_static.json  element_summary.json
tests/handlers/: test_fixtures_handler.py  test_history_handler.py  test_players_handler.py  test_seasons_handler.py  test_static_handler.py
tests/utils/loaders/: test_base_loader.py  test_bootstrap_loader.py  test_elements_summary_loader.py  test_s3_loader.py
tests/utils/preprocessors/: test_base_preprocessor.py  test_elements_preprocessor.py
utils/: CLAUDE.md  config.py  fpl_statshub.py  fplstatshub.py  loader.py  preprocessor.py
utils/loaders/: CLAUDE.md  base_loader.py  bootstrap_static_loader.py  elements_summary_loader.py  s3_loader.py
utils/plots/: radar_chart.py
utils/preprocessors/: CLAUDE.md  base_preprocessor.py  bootstrap_static_preprocessors.py  elements_summary_preprocessors.py
views/: player_view.py
