[project]
name = "fpl-analytics"
version = "0.1.0"
description = "Pure-Python FPL analytics server with D3.js frontend"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "pandas>=2.0",
    "boto3>=1.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-playwright>=0.4",
    "ruff>=0.4",
    "bandit[toml]>=1.7",
]

# ---------------------------------------------------------------------------
# ruff — linter and formatter
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 100

exclude = [
    "venv",
]

[tool.ruff.lint]
# E/W = pycodestyle, F = pyflakes, I = isort, N = pep8-naming,
# S = bandit subset, UP = pyupgrade, B = flake8-bugbear
select = ["E", "W", "F", "I", "N", "UP", "B"]
ignore = [
    "E501",   # line too long — ruff format handles this
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",   # assert is fine in tests
    "N802",   # lower-case method names are fine in unittest
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short"

# ---------------------------------------------------------------------------
# bandit — static security analysis
# ---------------------------------------------------------------------------
[tool.bandit]
skips = [
    "B101",   # assert — acceptable in test helpers
    "B603",   # subprocess call — we don't use subprocess
    "B607",   # partial executable path — we don't use subprocess
]
